--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,13 @@
     "@angular/platform-browser": "~11.2.8",
     "@angular/platform-browser-dynamic": "~11.2.8",
     "@angular/router": "~11.2.8",
+    "@fortawesome/fontawesome-free": "~5.6.3",
+    "@types/chart.js": "^2.7.40",
+    "angular-bootstrap-md": "^11.1.0",
+    "animate.css": "~3.7.2",
     "bootstrap": "^4.6.1",
+    "chart.js": "^2.7.2",
+    "hammerjs": "~2.0.8",
     "ngx-accordion": "0.0.17",
     "ngx-bootstrap": "^7.0.0",
     "ngx-file-drop": "^11.2.0",
